refactor: rewrite project structure
